@@ -83,7 +83,9 @@ map< int, vector <double> > muon_hodo_HitProcess :: chargeTime(MHit* aHit, int h
 	return CT;
 }
 
-// - voltage: returns a voltage value for a given time. The input are charge value, time
+// - voltage: returns a voltage value for a given time. The input are:
+// charge value (coming from chargeAtElectronics)
+// time (coming from timeAtElectronics)
 double muon_hodo_HitProcess :: voltage(double charge, double time, double forTime)
 {
 	return 0.0;
